# ray-tracer

./: CMakeLists.txt  README.md
ext/lib_lodepng/pics/: simple_bkg.ppm
ext/lib_ssdatas/: ssdatas.hpp
ext/lib_ssmath/: ssmath.cpp  ssmath.hpp
scenes/: scene01.xml  scene02.xml  scene03.xml
src/: main.cpp
src/API/: API.cpp  API.hpp
src/Background/: Background.cpp  Background.hpp
src/Color/: Color.cpp  Color.hpp
src/Film/: Film.cpp  Film.hpp
src/Parser/: Parser.cpp  Parser.hpp
src/RunningOptions/: PrintIMG.cpp  PrintIMG.hpp  RunningOptions.cpp  RunningOptions.hpp
